[gd_scene load_steps=10 format=2]

[ext_resource path="res://demo/list_demo/transfrom/demo.gd" type="Script" id=1]
[ext_resource path="res://demo/objects/char_viewport.tscn" type="PackedScene" id=2]
[ext_resource path="res://addons/ez_shader/utils_shader/EzTransfromGold.gd" type="Script" id=3]
[ext_resource path="res://addons/ez_shader/utils_shader/EzTransformMetal.gd" type="Script" id=4]
[ext_resource path="res://demo/objects/back_ground.tscn" type="PackedScene" id=5]
[ext_resource path="res://addons/ez_shader/utils_shader/EzTransformGhost.gd" type="Script" id=6]
[ext_resource path="res://addons/ez_shader/utils_shader/EzTransformFreeze.gd" type="Script" id=7]
[ext_resource path="res://addons/ez_shader/utils_shader/EzTransformBurn.gd" type="Script" id=8]

[sub_resource type="Environment" id=1]
background_mode = 4
glow_enabled = true

[node name="demo" type="Node2D"]
script = ExtResource( 1 )

[node name="CanvasLayer" parent="." instance=ExtResource( 5 )]

[node name="Char" parent="." instance=ExtResource( 2 )]
position = Vector2( 100.393, 435.804 )

[node name="Char2" parent="." instance=ExtResource( 2 )]
position = Vector2( 252.981, 434.607 )
title = "Transform Gold"

[node name="EzTransfromGold" type="Node" parent="Char2"]
script = ExtResource( 3 )

[node name="Char3" parent="." instance=ExtResource( 2 )]
position = Vector2( 415.355, 420.785 )
title = "Transform Metal"

[node name="EzTransformMetal" type="Node" parent="Char3"]
script = ExtResource( 4 )

[node name="Char4" parent="." instance=ExtResource( 2 )]
position = Vector2( 575.71, 413.766 )
title = "Transform Ghost"

[node name="EzTransformGhost" type="Node" parent="Char4"]
script = ExtResource( 6 )

[node name="Char5" parent="." instance=ExtResource( 2 )]
position = Vector2( 745.243, 416.178 )
title = "Transform Freeze"

[node name="EzTransfromFreeze" type="Node" parent="Char5"]
script = ExtResource( 7 )

[node name="Char6" parent="." instance=ExtResource( 2 )]
position = Vector2( 911.187, 417.981 )
title = "Transform Burn"

[node name="EzTransfromBurn" type="Node" parent="Char6"]
script = ExtResource( 8 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 1 )
